--- a/main.html
+++ b/main.html
@@ -8,10 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<d3v id='container'>
+	<div id='container'>
 		<h3 id='verification_heading'> Verify Your Account</h3>
 		<p id='verification_subtext'>We emailed you the six digit code to acciojob@email.com. Enter the code to confirm your email address.</p>
+		
+		<div class='code-container'>
+			<input class='code' type='text' />
+			<input class='code' type='text' />
+			<input class='code' type='text' />
+			<input class='code' type='text' />
+			<input class='code' type='text' />
+			<input class='code' type='text' />
+		</div>
 	</div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
