--- a/main.html
+++ b/main.html
@@ -13,15 +13,14 @@
 		<p id='verification_subtext'>We emailed you the six digit code to acciojob@email.com. Enter the code to confirm your email address.</p>
 		
 		<div class='code-container'>
-			<input class='code' type='text' />
-			<input class='code' type='text' />
-			<input class='code' type='text' />
-			<input class='code' type='text' />
-			<input class='code' type='text' />
-			<input class='code' type='text' />
+			<input class='code' type='text' maxlength=1 autofocus />
+			<input class='code' type='text' maxlength=1 />
+			<input class='code' type='text' maxlength=1 />
+			<input class='code' type='text' maxlength=1 />
+			<input class='code' type='text' maxlength=1 />
+			<input class='code' type='text' maxlength=1 />
 		</div>
 	</div>
-
     <script type="text/javascript" src="./script.js">
 </script>
 
