--- a/main.html
+++ b/main.html
@@ -13,12 +13,12 @@
 		<p id='verification_subtext'>We emailed you the six digit code to acciojob@email.com. Enter the code to confirm your email address.</p>
 		
 		<div class='code-container'>
-			<input class='code' type='text' maxlength=1 autofocus />
-			<input class='code' type='text' maxlength=1 />
-			<input class='code' type='text' maxlength=1 />
-			<input class='code' type='text' maxlength=1 />
-			<input class='code' type='text' maxlength=1 />
-			<input class='code' type='text' maxlength=1 />
+			<input id='code-1' class='code' type='text' maxlength=1 />
+			<input id='code-2' class='code' type='text' maxlength=1 />
+			<input id='code-3' class='code' type='text' maxlength=1 />
+			<input id='code-4' class='code' type='text' maxlength=1 />
+			<input id='code-5' class='code' type='text' maxlength=1 />
+			<input id='code-6' class='code' type='text' maxlength=1 />
 		</div>
 	</div>
     <script type="text/javascript" src="./script.js">
